Add task management
